# E-commerce-CLV-Predictor

./: .coverage  .dockerignore  .gitignore  AGENTS.md  Cuaderno_Pre_EntregaLab.ipynb  Makefile  PLAN.md  PRD.md  Pre_Entrega_Online_Retail_II.ipynb  README.md  docker-compose.yml  package.json  pyproject.toml
Test files/: high_value_customer.csv  normal_behavior.csv  ood_behavior.csv  rfm_samples.csv
artifacts/training/: best_model.pth  scaler.joblib
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/core_pipeline_20260603/: spec.md
conductor/archive/docker_deployment_20260603/: index.md  metadata.json  plan.md  spec.md
conductor/archive/documentation_blueprint_20260603/: index.md  plan.md
conductor/archive/inference_dashboard_20260603/: metadata.json  plan.md  spec.md
conductor/archive/pytorch_training_20260603/: plan.md
conductor/tracks/core_pipeline_20260603/: index.md  metadata.json  plan.md
conductor/tracks/docker_deployment_20260603/: plan.md
conductor/tracks/documentation_blueprint_20260603/: metadata.json  plan.md  spec.md
conductor/tracks/inference_dashboard_20260603/: index.md  plan.md
conductor/tracks/pytorch_training_20260603/: index.md  metadata.json  plan.md  spec.md
deploy/: k8s-backend.yaml
docs/: api.md  architecture.md  architecture.txt  training_report.md
scripts/: expand_test_files.py  generate_placeholder_model.py
