[project]
name = "ecommerce-clv-predictor"
version = "0.1.0"
description = "E-commerce CLV Predictor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.uv.workspace]
members = ["packages/backend"]

[tool.pytest.ini_options]
testpaths = ["packages/backend/tests"]
pythonpath = ["packages/backend/src"]
